modernized per IDE suggestions